--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,5 +1,15 @@
-fastapi==0.120.1
-uvicorn==0.38.0
-tensorflow-macos==2.15.0
+fastapi==0.121.2
+numpy==2.3.5
+opencensus==0.11.4
+opencensus_context==0.1.3
+opencensus_ext_azure==1.1.15
+pandas==2.3.3
+Pillow==12.0.0
+pydantic==2.12.4
+python-dotenv==1.2.1
+Requests==2.32.5
+streamlit==1.51.0
+tensorflow_macos==2.15.0
 transformers==4.57.1
-pydantic==2.12.3
+uvicorn==0.38.0
+
