--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,30 @@
-fastapi==0.121.2
-numpy==1.24.3
+
+fastapi==0.121.3
+joblib==1.5.2
+uvicorn==0.38.0
+scikit_learn==1.7.2
+
 opencensus==0.11.4
 opencensus_context==0.1.3
 opencensus_ext_azure==1.1.15
+
 pydantic==2.12.4
 python-dotenv==1.2.1
-tensorflow==2.15.0
-transformers==4.57.1
-uvicorn==0.38.0
+
+mlflow==3.5.1
+mlflow_skinny==3.5.1
+mlflow_tracing==3.5.1
+numpy==2.3.5
+nltk==3.9.2
+
+# pandas==2.3.3
+# Pillow==12.0.0
+
+# PyYAML==6.0.3
+# Requests==2.32.5
+
+# streamlit==1.51.0
+# tensorflow==2.20.0
+# tensorflow_macos==2.15.0 !
+# transformers==4.57.1
+
