--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -16,6 +16,10 @@ jobs:
   tests:
     runs-on: ubuntu-latest
 
+    env:
+      APPINSIGHTS_INSTRUMENTATION_KEY: ${{ secrets.APPINSIGHTS_INSTRUMENTATION_KEY }}
+      RUN_MODE: ci
+
     steps:
       
       - name: Checkout code
@@ -41,10 +45,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: tests
     if: github.ref == 'refs/heads/main' && github.event_name == 'push' # deployer si push sur main
-
-    env:
-      APPINSIGHTS_INSTRUMENTATION_KEY: ${{ secrets.APPINSIGHTS_INSTRUMENTATION_KEY }}
-      RUN_MODE: prod
 
     steps:
       - name: Checkout code
